ARROW-9071: [C++] Fixed a bug in MakeArrayOfNull

The child array of a ListArray of nulls should have length 0.

Closes #7386 from brills/make_null_array_fix

Lead-authored-by: Zhuo Peng <1835738+brills@users.noreply.github.com>
Co-authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>